fieldx/tests/uncompilable/1.77/non_copy.stderr
error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/uncompilable/non_copy.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/uncompilable/non_copy.rs`

error[E0277]: the trait bound `String: Copy` is not satisfied
 --> tests/uncompilable/non_copy.rs:6:10
  |
6 |     foo: String,
  |          ^^^^^^ the trait `Copy` is not implemented for `String`
  |
note: required by a bound in `field_implements_copy`
 --> tests/uncompilable/non_copy.rs:3:1
  |
3 | #[fxstruct]
  | ^^^^^^^^^^^ required by this bound in `field_implements_copy`
  = note: this error originates in the attribute macro `fxstruct` (in Nightly builds, run with -Z macro-backtrace for more info)
